--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@chakra-ui/core": "1.0.0-rc.5",
+    "@chakra-ui/icons": "1.0.0-rc.5",
     "@prisma/cli": "2.8.0",
     "@prisma/client": "2.8.0",
     "blitz": "0.23.4",
