--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/jest": "26.0.14",
     "@types/react": "16.9.50",
     "@types/secure-password": "3.1.0",
+    "@types/uuid": "8.3.0",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
     "babel-eslint": "10.1.0",
@@ -69,12 +70,12 @@
     "jest": "26.4.2",
     "jest-environment-jsdom-fourteen": "1.0.1",
     "jest-watch-typeahead": "0.6.1",
-    "react-test-renderer": "16.13.1",
     "lint-staged": "10.4.0",
     "prettier": "2.1.2",
     "pretty-quick": "3.0.2",
-    "typescript": "4.0.3",
-    "ts-jest": "26.4.1"
+    "react-test-renderer": "16.13.1",
+    "ts-jest": "26.4.1",
+    "typescript": "4.0.3"
   },
   "private": true
 }
