--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@chakra-ui/icons": "1.0.0-rc.5",
     "@prisma/cli": "2.8.0",
     "@prisma/client": "2.8.0",
+    "bad-words": "3.0.3",
     "blitz": "0.23.4",
     "final-form": "4.20.1",
     "nprogress": "0.2.0",
@@ -53,6 +54,7 @@
     "@testing-library/jest-dom": "5.11.4",
     "@testing-library/react": "11.0.4",
     "@testing-library/react-hooks": "3.4.2",
+    "@types/bad-words": "3.0.0",
     "@types/jest": "26.0.14",
     "@types/react": "16.9.50",
     "@types/secure-password": "3.1.0",
