--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "bad-words": "3.0.3",
     "blitz": "0.23.4",
     "final-form": "4.20.1",
+    "mailchecker": "3.3.14",
     "nprogress": "0.2.0",
     "polished": "3.6.7",
     "react": "0.0.0-experimental-7f28234f8",
