--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["home", "leaderboards", "my", "my leaderboards home"]
+  "cSpell.words": ["home", "leaderboards", "my", "my leaderboards home", "querystringify"]
 }
