--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
   "dependencies": {
     "@chakra-ui/core": "1.0.0-rc.5",
     "@chakra-ui/icons": "1.0.0-rc.5",
-    "@prisma/cli": "2.8.0",
     "@prisma/client": "2.8.0",
     "bad-words": "3.0.3",
     "blitz": "0.23.4",
@@ -53,11 +52,13 @@
     "zod": "1.11.9"
   },
   "devDependencies": {
+    "@prisma/cli": "2.8.0",
     "@testing-library/jest-dom": "5.11.4",
     "@testing-library/react": "11.0.4",
     "@testing-library/react-hooks": "3.4.2",
     "@types/bad-words": "3.0.0",
     "@types/jest": "26.0.14",
+    "@types/querystringify": "2.0.0",
     "@types/react": "16.9.50",
     "@types/secure-password": "3.1.0",
     "@types/uuid": "8.3.0",
@@ -79,6 +80,7 @@
     "lint-staged": "10.4.0",
     "prettier": "2.1.2",
     "pretty-quick": "3.0.2",
+    "querystringify": "2.2.0",
     "react-test-renderer": "16.13.1",
     "ts-jest": "26.4.1",
     "typescript": "4.0.3"
