update leaderboards page

--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "@prisma/client": "2.8.0",
     "bad-words": "3.0.3",
     "blitz": "0.23.4",
+    "date-fns": "2.16.1",
     "final-form": "4.20.1",
     "is-mobile": "2.2.2",
     "mailchecker": "3.3.14",
     "nprogress": "0.2.0",
     "polished": "3.6.7",
+    "querystringify": "2.2.0",
     "react": "0.0.0-experimental-7f28234f8",
     "react-dom": "0.0.0-experimental-7f28234f8",
     "react-error-boundary": "2.3.2",
@@ -80,7 +82,6 @@
     "lint-staged": "10.4.0",
     "prettier": "2.1.2",
     "pretty-quick": "3.0.2",
-    "querystringify": "2.2.0",
     "react-test-renderer": "16.13.1",
     "ts-jest": "26.4.1",
     "typescript": "4.0.3"
