--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: yourscorekeeper
     env: node
-    plan: starter
+    plan: starter plus
     buildCommand: yarn --frozen-lockfile --prod=false; blitz db migrate; blitz build
     # If you have an out of memory error, change startCommand to "yarn next start"
     startCommand: blitz start --production
