--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "type": "github"
   },
   "scripts": {
-    "start": "blitz start",
-    "start:prod": "blitz start --production -H 0.0.0.0 -p ${PORT:-8080}",
+    "dev": "blitz start",
+    "start": "blitz start --production -H 0.0.0.0 -p ${PORT:-8080}",
     "studio": "blitz db studio",
     "build": "NODE_ENV=production blitz db migrate && blitz build",
     "lint": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx .",
