--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-paginate": "6.5.0",
     "react-table": "7.5.2",
     "secure-password": "4.0.0",
+    "sync-request": "6.1.0",
     "uuid": "8.3.0",
     "wrangler": "0.0.2",
     "zod": "1.11.9"
