--- a/package.json
+++ b/package.json
@@ -45,14 +45,15 @@
     ]
   },
   "dependencies": {
-    "@chakra-ui/core": "1.0.0-rc.5",
-    "@chakra-ui/icons": "1.0.0-rc.5",
+    "@chakra-ui/core": "1.0.0-rc.7",
+    "@chakra-ui/icons": "1.0.0-rc.7",
     "@prisma/client": "2.10.0",
     "bad-words": "3.0.3",
     "blitz": "0.23.4",
     "cors": "2.8.5",
     "date-fns": "2.16.1",
     "final-form": "4.20.1",
+    "framer-motion": "2.9.4",
     "is-mobile": "2.2.2",
     "mailchecker": "3.3.14",
     "node-fetch": "2.6.1",
