--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: yourscorekeeper
     env: node
     plan: starter plus
-    buildCommand: yarn --frozen-lockfile --prod=false; blitz db migrate; blitz build
+    buildCommand: yarn --frozen-lockfile --prod=false; blitz db migrate; blitz build && node postBuild.js
     # If you have an out of memory error, change startCommand to "yarn next start"
     startCommand: blitz start --production
     envVars:
