--- a/render.yaml
+++ b/render.yaml
@@ -6,6 +6,7 @@ services:
     buildCommand: yarn --frozen-lockfile --prod=false; blitz db migrate; blitz build && node postBuild.js
     # If you have an out of memory error, change startCommand to "yarn next start"
     startCommand: blitz start --production
+    healthCheckPath: /ping
     envVars:
       - key: NODE_ENV
         value: production
