--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-final-form": "6.5.1",
     "react-icons": "3.11.0",
     "react-paginate": "6.5.0",
+    "react-share": "4.3.1",
     "react-table": "7.5.2",
     "react-toastify": "6.0.9",
     "secure-password": "4.0.0",
